# claude-code-sourcemap

./: .gitignore  AGENTS.md  README.md  core-audit-report.md  sidecar-audit-report.md  why-agent-skill-bypass-core.md
.github/workflows/: build.yml
claude-code/: .env.sample  .gitignore  .mcp.json  README.md  convert-agents-to-markdown.js  eslint-custom-rules.cjs  eslint.config.ts  package.json  tsconfig.json
claude-code/docs/: README.md  environment-variables.md  feature-flags.md  otel.md
claude-code/scripts/: build-sidecar.ts  build.ts  config.ts  dev.ts  extract-features.ts  generate-source-code.ts  prepublishOnly.ts
claude-code/src/: QueryEngine.ts  commands.ts  cost-tracker.ts  index.ts  query.ts  tools.ts
docs/: agentic-framework-plan.md  browser-tool-technical-plan.md  claude-code-agentic-autonomy-roadmap.md  desktop-implementation-plan.md  github-config-repo-guide.md  multi-sidecar-architecture.md
frontend/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src-tauri/: Cargo.toml  KEYCHAIN_AUDIT.md  KEYCHAIN_FIX.md  KEYCHAIN_TROUBLESHOOTING.md  diagnose-keychain.sh  fix-keychain-auth.sh  fix-keychain-permanent.sh  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/nsis/: uninstall-hooks.nsh
frontend/src-tauri/src/: audio_capture.rs  lib.rs  secure_storage.rs  sync.rs
frontend/src-tauri/src/agent/: ipc_bridge.rs  lifecycle.rs  mod.rs  process.rs
frontend/src-tauri/src/plugins/: mac_rounded_corners.rs  mod.rs
(+235 files in other folders)
