[package]
name = "claude-code-desktop"
version = "0.1.0"
description = "Claude Code Desktop - Tauri backend"
authors = ["wangke"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt", "time"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
dirs-next = "2.0"
chrono = "0.4"
keyring = { version = "3.6", features = [
  "apple-native",      # macOS Keychain
  "windows-native",    # Windows Credential Manager
  "linux-native-sync-persistent",  # Linux keyutils + secret-service
] }  # 跨平台安全存储

# 音频录制
cpal = "0.15"
hound = "3.5"
once_cell = "1.19"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2.7"
